# pretix-esn-accounts

./: .update-locales.sh  LICENSE  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg
.github/workflows/: style.yml  tests.yml
pretix_esn_accounts/: apps.py  auth_backend.py  esn_accounts_roles.py  forms.py  models.py  signals.py  urls.py  views.py
pretix_esn_accounts/locale/de/LC_MESSAGES/: django.po
pretix_esn_accounts/migrations/: 0001_initial.py
pretix_esn_accounts/templates/pretix_esn_accounts/: team_assignment_rule_delete.html  team_assignment_rule_edit.html  team_assignment_rules.html
